<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">I Can</string>
    <string name="edit_goal_Finish_time">Finish time:</string>
    <string name="edit_goal_Start_time">Start time:</string>
    <string name="edit_goal_Description">Description:</string>
    <string name="edit_goal_Title">Title:</string>
    <string name="edit_goal_parent_title">Parent :</string>
    <string name="Create_new_goal_button">Create new Goal</string>
    <string name="Edit_goal_button">Save Goal</string>
    <string name="Create_SubTask_button">Create SubTask</string>
    <string name="action_bar_menu_add">Add goal</string>
    <string name="action_bar_menu_edit">Edit goal</string>
</resources>
