<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_goal_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditGoalActivity" >
	
    <TextView
        android:id="@+id/Sfds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />


    <GridLayout
        android:id="@+id/es"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="6" >

        
   		 <TextView
	        android:id="@+id/textViewParentTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_goal_parent_title" />
   		 
	    <TextView
	        android:id="@+id/textViewParentTitleValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/edit_goal_Title" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="150dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="2"
            android:text="@string/edit_goal_Description" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/textViewStartedAt"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text="@string/edit_goal_Start_time" />

        <TextView
            android:id="@+id/textViewStartedAtValue"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Space
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="4" />
        
        <TextView
            android:id="@+id/textViewFinishedAt"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="5"
            android:text="@string/edit_goal_Finish_time" />

        <TextView
            android:id="@+id/textViewFinishedAtValue"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="5" />
        
    </GridLayout>

</LinearLayout>